# TangraPlay

./: .gitmodules  AboutProgram.qml  AudioPlayer.qml  CMakeLists.txt  LICENSE  MediaButton.qml  MenuButton.qml  MenuToolbar.qml  PgLive.qml  PgNews.qml  README.md  TangraPlay.pro  appveyor.yml  currentshow.cpp  currentshow.h  fetchshowid.cpp  fetchshowid.h  main.cpp  main.qml  make-flatpak.sh  org.petrovs_info.tangraplay.appdata.xml  org.petrovs_info.tangraplay.desktop  org.petrovs_info.tangraplay.json  qml.qrc  tangratray.cpp  tangratray.h  windowhelper.cpp  windowhelper.h
.github/workflows/: deploy.yml
Assets/: TangraPlay.desktop
Resources/: CMakeLists.txt
Website/tangraplay/: config.toml
Website/tangraplay/content/: downloads.md
ui/: AboutProgram.qml  AudioPlayer.qml  CurrentShow.qml  CurrentTrack.qml  MediaButton.qml  MenuButton.qml  MenuToolbar.qml  NewsDelegate.qml  PgLive.qml  PgNews.qml  main.qml
